--- a/course.html
+++ b/course.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Marketingwiththmanuel </title>
+  <title>ECOM SHEPHERD </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -29,7 +29,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> Manuel Timi</a></h1>
+      <h1 class="logo"><a href="index.html">ECOM SHEPHERD</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -50,7 +50,7 @@
     </div>
   </header><!-- End Header -->
 
-  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/Mrtumie2.jpeg)">
+  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/Gubion2.jpg)">
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -130,7 +130,7 @@
         <div class="ecome">
           <ul id="list">
             <li><a href="#" ><span class="ecom"><i class="bi bi-facebook"></i></span></a></li>
-            <li><a href="https://www.instagram.com/marketingwithmanuel" target="tab"><span class="ecom"><i class="bi bi-instagram"></i></span></a></li>
+            <li><a href="#" target="tab"><span class="ecom"><i class="bi bi-instagram"></i></span></a></li>
             <li><a href="#"><span class="ecom"><i class="bi bi-twitter"></i></span></a></li>
             <li><a href="#"><span class="ecom"><i class="bi bi-linkedin"></i></span></a></li>
           </ul>
@@ -150,10 +150,10 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>Marketingwiththmanuel</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>ECOM SHEPHERD</strong>. All Rights Reserved</p>
             <div class="credits">
              
-              Designed by Marketingwiththmanuel
+              Designed by ECOM SHEPHERD
             </div>
           </div>
         </div>
