--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Marketingwiththmanuel</title>
+  <title>ECOM SHEPHERD</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -29,7 +29,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Manuel Timi</a></h1>
+      <h1 class="logo"><a href="index.html">SHEPHERD</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -52,13 +52,13 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/Mrtumie2.jpeg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/Gubion2.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am Marketingwiththmanuel  </h1>
+          <h1 class="hero-title mb-4">ECOM SHEPHERD  </h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Website Designer,Website Developer, Ecommerce Specialist, Digital Marketer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
@@ -79,15 +79,15 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/Mr tumie (1).jpeg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/SHEPHERD.jpeg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Marketingwiththmanuel</span></p>
+                        <p><span class="title-s">Name: </span> <span>ECOM SHEPHERD</span></p>
                         <p><span class="title-s">Profile: </span> <span>Ecommerce Specialist</span></p>
-                        <p><span class="title-s">Email: </span> <span> emmaunielidowu625@gmail</span></p>
-                        <p><span class="title-s">Phone: </span> <span>+234 9065352085</span></p>
+                        <p><span class="title-s">Email: </span> <span> Ecomshepherd</span></p>
+                        <p><span class="title-s">Phone: </span> <span>+234 7065501112</span></p>
                       </div>
                     </div>
                   </div>
@@ -125,7 +125,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Hey there! I'm <span style="background-color:#9B4435;color: white;text-transform: capitalize;">[Marketingwiththmanuel ]</span>, a versatile professional thriving at the intersection of digital marketing, ecommerce, and web development. With a passion for crafting seamless online experiences, I bring together creativity, technical prowess, and strategic insight to drive impactful results.
+                      Hey there! I'm [ECOM SHEPHERD ], a versatile professional thriving at the intersection of digital marketing, ecommerce, and web development. With a passion for crafting seamless online experiences, I bring together creativity, technical prowess, and strategic insight to drive impactful results.
                     </p>
                     <p class="lead">
                       As a Digital Marketer, I delve deep into the digital landscape, leveraging data-driven strategies to elevate brand presence, engage audiences, and maximize ROI. From SEO and SEM to social media and email marketing, I'm adept at navigating the ever-evolving digital ecosystem to ensure brands stand out amidst the noise.
@@ -168,7 +168,7 @@
               <div class="service-content">
                 <h2 class="s-title">Web Design</h2>
                 <p class="s-description text-center">
-                  I'm [Marketingwiththmanuel ], a passionate website designer dedicated to crafting immersive digital experiences that captivate and inspire. With a blend of artistic flair and technical expertise, I specialize in translating ideas into visually stunning website.
+                  I'm [ECOM SHEPHERD ], a passionate website designer dedicated to crafting immersive digital experiences that captivate and inspire. With a blend of artistic flair and technical expertise, I specialize in translating ideas into visually stunning website.
                 </p>
               </div>
             </div>
@@ -222,7 +222,7 @@
               <div class="service-content">
                 <h2 class="s-title">Graphic Design</h2>
                 <p class="s-description text-center">
-                  I'm [Marketingwiththmanuel ], a seasoned graphic designer with a passion for transforming ideas into captivating visual narratives. With a keen eye for detail and a knack for storytelling, I specialize in crafting designs that not only catch the eye but also leave a lasting impression.
+                  I'm [ECOM SHEPHERD ], a seasoned graphic designer with a passion for transforming ideas into captivating visual narratives. With a keen eye for detail and a knack for storytelling, I specialize in crafting designs that not only catch the eye but also leave a lasting impression.
                 </p>
               </div>
             </div>
@@ -236,7 +236,7 @@
               <div class="service-content">
                 <h2 class="s-title">Marketing Services</h2>
                 <p class="s-description text-center">
-                  I'm [Marketingwiththmanuel ], a seasoned marketing professional dedicated to driving business growth and success through strategic marketing solutions. With a proven track record of delivering results, I specialize in guiding brands through the ever-evolving landscape of modern marketing.
+                  I'm [ECOM SHEPHERD ], a seasoned marketing professional dedicated to driving business growth and success through strategic marketing solutions. With a proven track record of delivering results, I specialize in guiding brands through the ever-evolving landscape of modern marketing.
                 </p>
               </div>
             </div>
@@ -246,7 +246,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Counter Section ======= -->
-    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/Mrtumie2.jpeg)">
+    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/Gubion2.jpg)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
         <div class="row">
@@ -472,7 +472,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/Mrtumie2.jpeg)">
+    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/Gubion2.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -542,7 +542,7 @@
     </section><!-- End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/Mrtumie2.jpeg)">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/Gubion2.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -604,7 +604,7 @@
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span>No. 33, UI, ibadan</li>
                         <li><span class="bi bi-phone"></span> (+234) 9065352085</li>
-                        <li><span class="bi bi-envelope"></span> emmaunielidowu625@gmail.com</li>
+                        <li><span class="bi bi-envelope"></span> Ecomshepherd22@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
@@ -632,9 +632,9 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>Marketingwiththmanuel</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>ECOM SHEPHERD</strong>. All Rights Reserved</p>
             <div class="credits">
-              Designed by Marketingwiththmanuel</a>
+              Designed by ECOM SHEPHERD</a>
             </div>
           </div>
         </div>
