--- a/index.html
+++ b/index.html
@@ -319,22 +319,22 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://petzypetsstore.com" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://www.cosyapparel.ca/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/done.JPG" alt="" class="img-fluid">
+                  <img src="assets/img/shop1.JPG" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">petzypetsstore</h2>
+                    <h2 class="w-title">Cosyapparel</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Jan. 2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://petzypetsstore.com" target="tab"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://www.cosyapparel.ca/" target="tab"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -369,22 +369,22 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://9iva.com" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://gadgetplug.ca/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/done2.JPG" alt="" class="img-fluid">
+                  <img src="assets/img/shop2.JPG" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">9iva</h2>
+                    <h2 class="w-title">Gadgetplug</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">25 Jan. 2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://9iva.com" target="tab"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://gadgetplug.ca/" target="tab"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -394,22 +394,23 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://www.thewomancards.com/" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://bit.ly/3XtCbon" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/the woman.JPG" alt="" class="img-fluid">
+                  <img src="assets/img/shop3.JPG" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Thewomancards</h2>
+                    <h2 class="w-title">
+                      RenewVitality</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">10 Ap. 2020</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">10 Ap. 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://www.thewomancards.com/" target="tab"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://bit.ly/3XtCbon" target="tab"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -419,22 +420,22 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://roseskinco.com" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://bibirevere.com/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/done3.JPG" alt="" class="img-fluid">
+                  <img src="assets/img/shopp5.JPG" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Roseskinco</h2>
+                    <h2 class="w-title">Bibirevere</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">28 Feb. 2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://roseskinco.com " target="tab"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://bibirevere.com/ " target="tab"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -489,7 +490,7 @@
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        "Working with [Marketingwiththmanuel] has been a game-changer for our online business. Their expertise in digital marketing strategies and eCommerce optimization has significantly boosted our sales and expanded our reach. Not only did they develop a visually stunning website that perfectly reflects our brand identity, but their marketing tactics have consistently driven traffic and conversions. Their team is highly responsive, innovative, and dedicated to delivering results. Thanks to their efforts, we've seen substantial growth in our online presence and revenue. We highly recommend [SHEPHERD] to any eCommerce business looking to thrive in the digital landscape."
+                        "Working with [ ECOM SHEPHERD ] has been a game-changer for our online business. Their expertise in digital marketing strategies and eCommerce optimization has significantly boosted our sales and expanded our reach. Not only did they develop a visually stunning website that perfectly reflects our brand identity, but their marketing tactics have consistently driven traffic and conversions. Their team is highly responsive, innovative, and dedicated to delivering results. Thanks to their efforts, we've seen substantial growth in our online presence and revenue. We highly recommend [SHEPHERD] to any eCommerce business looking to thrive in the digital landscape."
                       </p>
                     </div>
                   </div>
@@ -503,7 +504,7 @@
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        "Choosing [Marketingwiththmanuel ] for our website development needs was one of the best decisions we made for our business. Their team demonstrated exceptional professionalism, creativity, and technical expertise throughout the entire process. They took the time to understand our unique requirements and vision, and then executed flawlessly to deliver a website that exceeded our expectations. Not only is our new site visually appealing and user-friendly, but it also performs seamlessly across all devices. The attention to detail and commitment to quality exhibited by [SHEPHERD] truly sets them apart. We couldn't be happier with the results and highly recommend their services to anyone seeking a top-notch website development partner."
+                        "Choosing [ ECOM SHEPHERD ] for our website development needs was one of the best decisions we made for our business. Their team demonstrated exceptional professionalism, creativity, and technical expertise throughout the entire process. They took the time to understand our unique requirements and vision, and then executed flawlessly to deliver a website that exceeded our expectations. Not only is our new site visually appealing and user-friendly, but it also performs seamlessly across all devices. The attention to detail and commitment to quality exhibited by [SHEPHERD] truly sets them apart. We couldn't be happier with the results and highly recommend their services to anyone seeking a top-notch website development partner."
                       </p>
                     </div>
                   </div>
