--- a/course.html
+++ b/course.html
@@ -130,7 +130,7 @@
         <div class="ecome">
           <ul id="list">
             <li><a href="#" ><span class="ecom"><i class="bi bi-facebook"></i></span></a></li>
-            <li><a href="#" target="tab"><span class="ecom"><i class="bi bi-instagram"></i></span></a></li>
+            <li><a href="https://www.instagram.com/ecomshepherd_?igsh=Y2d3OTBkY3lscjQ0&utm_source=qr" target="tab"><span class="ecom"><i class="bi bi-instagram"></i></span></a></li>
             <li><a href="#"><span class="ecom"><i class="bi bi-twitter"></i></span></a></li>
             <li><a href="#"><span class="ecom"><i class="bi bi-linkedin"></i></span></a></li>
           </ul>
