contact form change for bit

--- a/index.html
+++ b/index.html
@@ -554,11 +554,27 @@
                   <div class="col-md-6">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Send Message Us
+                        Send Us Message through social handles below👇👇👇👇
                       </h5>
                     </div>
                     <div>
-                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                      <ul class="list-ico">
+                        <li><span class="bi bi-geo-alt"></span>No. 33, UI, ibadan</li>
+                        <li><span class="bi bi-phone"></span> (+234) 9065352085</li>
+                        <li><span class="bi bi-envelope"></span> Ecomshepherd22@gmail.com</li>
+                      </ul>
+
+                      <div class="socials">
+                        <ul>
+                          <li><a href="https://www.facebook.com/profile.php?id=100088871547290&mibextid=LQQJ4d" ><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
+                          <li><a href="https://www.instagram.com/ecom_shepherd_?igsh=MWM3bGNlemRiMmgwaA%3D%3D&utm_source=qr"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                          <li><a href="https://x.com/deonsales1?s=21"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
+                          <li><a href="http://linkedin.com/in/ecom-shepherd-312ab9234"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                          <li><a href="https://t.me/Ecom_shepherd" target="tab"><span class="ico-circle"><i class="bi bi-telegram"></i></span></a></li>
+
+                        </ul>
+                      </div>
+                      <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -589,7 +605,7 @@
                             <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
                           </div>
                         </div>
-                      </form>
+                      </form> -->
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -602,20 +618,16 @@
                       <p class="lead">
                         Ready to take your business to the next level? Let's chat! Whether you're looking to boost your online presence, optimize your marketing strategy, or dive into a new project, we're here to help. Our team is dedicated to turning your goals into reality. From tailored solutions to personalized support, we've got you covered every step of the way. Get in touch today, and let's make magic happen together!"
                       </p>
-                      <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span>No. 33, UI, ibadan</li>
-                        <li><span class="bi bi-phone"></span> (+234) 9065352085</li>
-                        <li><span class="bi bi-envelope"></span> Ecomshepherd22@gmail.com</li>
-                      </ul>
+                  
                     </div>
-                    <div class="socials">
+                    <!-- <div class="socials">
                       <ul>
                         <li><a href="https://www.facebook.com/profile.php?id=100088871547290&mibextid=LQQJ4d" ><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href="https://www.instagram.com/ecom_shepherd_?igsh=MWM3bGNlemRiMmgwaA%3D%3D&utm_source=qr"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href="https://x.com/deonsales1?s=21"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href="http://linkedin.com/in/ecom-shepherd-312ab9234"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
