--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@
                           <li><a href="https://x.com/deonsales1?s=21"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                           <li><a href="http://linkedin.com/in/ecom-shepherd-312ab9234"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                           <li><a href="https://t.me/Ecom_shepherd" target="tab"><span class="ico-circle"><i class="bi bi-telegram"></i></span></a></li>
+                          <li><a href="https://bit.ly/3XLUPbj" target="tab"><span class="ico-circle"><i class="bi bi-whatsapp"></i></span></a></li>
 
                         </ul>
                       </div>
