--- a/course.html
+++ b/course.html
@@ -129,10 +129,14 @@
       <h3 style="margin-left: 20px;">Social Media links</h3>
         <div class="ecome">
           <ul id="list">
-            <li><a href="#" ><span class="ecom"><i class="bi bi-facebook"></i></span></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100088871547290&mibextid=LQQJ4d" ><span class="ecom"><i class="bi bi-facebook"></i></span></a></li>
             <li><a href="https://www.instagram.com/ecomshepherd_?igsh=Y2d3OTBkY3lscjQ0&utm_source=qr" target="tab"><span class="ecom"><i class="bi bi-instagram"></i></span></a></li>
-            <li><a href="#"><span class="ecom"><i class="bi bi-twitter"></i></span></a></li>
-            <li><a href="#"><span class="ecom"><i class="bi bi-linkedin"></i></span></a></li>
+            <li><a href="https://x.com/deonsales1?s=21"><span class="ecom"><i class="bi bi-twitter"></i></span></a></li>
+            <li><a href="http://linkedin.com/in/ecom-shepherd-312ab9234"><span class="ecom"><i class="bi bi-linkedin"></i></span></a></li>
+            <li><a href="https://t.me/Ecom_shepherd"><span class="ecom"><i class="bi bi-telegram"></i></span></a></li>
+            <li><a href="https://bit.ly/3XLUPbj"><span class="ecom"><i class="bi bi-whatsapp"></i></span></a></li>
+
+
           </ul>
       </div>
       </div>
