--- a/course.html
+++ b/course.html
@@ -50,7 +50,7 @@
     </div>
   </header><!-- End Header -->
 
-  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/Gubion2.jpg)">
+  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/gun1.jpg)">
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
