--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/Gubion2.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/gun1.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -79,7 +79,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/ecomsheperd 2.jpeg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/mr.jpeg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -246,7 +246,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Counter Section ======= -->
-    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/Gubion2.jpg)">
+    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/gun1.jpg)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
         <div class="row">
@@ -473,7 +473,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/Gubion2.jpg)">
+    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/gun1.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -543,7 +543,7 @@
     </section><!-- End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/Gubion2.jpg)">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/gun1.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
